fix: Correct z-index for disguised image
This change corrects the z-index of the disguised image to ensure it is displayed on top of the talking head animation.

--- a/src/App.scss
+++ b/src/App.scss
@@ -163,7 +163,7 @@ body {
       width: 80%;
       height: 80%;
       object-fit: contain;
-      z-index: 10;
+      z-index: 30;
       justify-self: center;
       align-self: center;
     }
